# AI4S-agent-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TOOLS.json  fix_uv_locks.sh  github
.github/workflows/: contributor-exclusions.yml  generate-showcase.yml
config/: categories.json
data/: CONTRIBUTORS.md  contributors.json  tools.json
mcp-agent/: .env.template  GITHUB_AGENT_README.md  README.md  README_REPO_CONVERSION.md  __init__.py  agent.py  github_agent.py  github_prompt.py  github_tools.py  prompt.py  pyproject.toml  repo_tools.py  requirements.txt  tools.py
scripts/: README.md  generate_mcp_configs.py  generate_simple_showcase.py  generate_tools_json.py  tools_dashboard.py  update_contributors.py
servers/: server_utils.py
servers/ABACUS-tool/: pyproject.toml  server.py
servers/ABACUS-tool/src/abacusagent/modules/: dos.py  elastic.py
servers/ABACUS-tool/src/abacusagent/modules/util/: pyatb.py
servers/ABACUS-tools/: README.md  mcp-config.json  metadata.json  server.py
servers/ABACUS-tools/examples/: generate_bulk_structure.txt
servers/ABACUS-tools/examples/my_agent/: agent.py
servers/ABACUS-tools/src/abacusagent/: env.py  main.py
servers/ABACUS-tools/src/abacusagent/modules/: abacus.py  bader.py  band.py  deeptb_tool.py  relax.py
servers/ABACUS-tools/src/abacusagent/modules/util/: comm.py
servers/ABACUS-tools/tests/: test_abacus.py  test_dos.py
servers/ASKCOS/: ASKCOS.md  DEVELOPMENT_GUIDE_zh.md  README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/CompositionDART/: calc_density.py  constraints_utils.py  ga.py  mcp-config.json  metadata.json  pyproject.toml  server.py  target.py
servers/CompositionDART/constant/: atomic_mass.json  densities.json  mk_metal_densities.py  ptable.json
servers/CompositionDART/struct_template/: in.lmp  job.json
servers/DPACalculator/: mcp-config.json  metadata.json  pyproject.toml  server.py  test.ipynb
servers/DPCombo/: dpa1_train.json  dpa2_train.json  dpa3_train.json  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/HEA_paper_extract/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/HEA_paper_extract/dependencies/: HEA_extractor.py
servers/HEA_predict/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/HEA_predict/data/: binary_Hmix.csv
servers/HEA_predict/models/: Structure_predict_model.pkl  Type_predict_model.pkl  feats_scaler_struc.pkl  feats_scaler_type.pkl
servers/HEA_predict/src/: server.py
servers/ORCA_tools/: README.md  mcp-config.json  metadata.json  pyproject.toml  requirements.txt  server.py
servers/ORCA_tools/test_data/: C2H4O2.xyz  CH4.xyz  alanine_cpcm.out  alanine_gas.out  calc.inp
servers/ORCA_tools/vector_db_orca_manual_qwen/1471955d-1c4f-46b7-9d9e-b37e45c07994/: index_metadata.pickle
servers/OpenMM_agent/: server.py
servers/Optimade_Server/: bohrium_setup_env.sh  export_test_env.sh  export_uat_env.sh  mcp-config.json  metadata.json  server.py  utils.py
servers/Paper_Search/: mcp-config.json  metadata.json  pyproject.toml  server.py
servers/Paper_Search/papers/agent/: papers_info.json
servers/ProteinPrep_agent/: requirements.txt  server.py
servers/PySCF_tools/: handler.py  requirements.txt  server.py
servers/RDKit/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/Symbolic_regression/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/Symbolic_regression/src/: symbolic_regression.py
servers/_example/: README.md  metadata.json  pyproject.toml  server.py
servers/bio-agents-mcp/: mcp-config.json  metadata.json  server.py
servers/catalysis/: mcp-config.json  metadata.json  server.py
servers/data_analysis/: mcp-config.json  metadata.json  pyproject.toml  server.py
servers/deepmd_docs_rag/: mcp-config.json  metadata.json  pyproject.toml  server.py
servers/dna_sequence_analyzer/: mcp-config.json  metadata.json  pyproject.toml  server.py
servers/matbench_property_prediction/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/molpilot_autodE_server/: server.py
servers/molpilot_manual_rag_server/: server.py
servers/molpilot_orca_dataAnalysis_server/: server.py
servers/molpilot_orca_server/: server.py
servers/molpilot_pyscf_dataAnalysis_server/: safety_check.py  server.py
servers/molpilot_pyscf_server/: handler.py  server.py
servers/molpilot_structure_generator_server/: server.py
servers/nmrglue/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/perovskite_literature_plot/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/pubchem/: mcp-config.json  metadata.json  pyproject.toml  server.py
servers/pymol-mcp/: mcp-config.json  metadata.json  server.py
servers/structure_generate/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/superconductor/: README.md  metadata.json  pyproject.toml  superconductor_mcp_server.py
servers/thermoelectric/: README.md  mcp-config.json  metadata.json  pyproject.toml  server.py
servers/thermoelectric_materials_mcp_server/: README.md  pyproject.toml  thermoelectric_materials_mcp_server.py
servers/thermoelectric_mcp_server/: .README.md.swp  README.md  thermoelectric_mcp_server.py
servers/zotero-mcp/: README.md  mcp-config.json  metadata.json  server.py
servers/zotero-mcp/src/zotero_mcp/: chroma_client.py  cli.py  server.py
showcase/: index.html
