[project]
name = "mcp-tool-generator"
version = "0.1.0"
description = "Automatic MCP server generator for AI4S-agent-tools"
requires-python = ">=3.8"
dependencies = [
    "google-adk>=0.1.0",
    "python-dotenv>=1.0.0",
    "pathlib>=1.0.1"
]

[project.optional-dependencies]
pdf = ["PyPDF2>=3.0.0", "pdfplumber>=0.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-generate = "tool_generator:main"