[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "abacusagent"
dynamic = ["version"]
description = "Abacus agent"
requires-python = ">=3.11"

[project.scripts]
abacusagent = "abacusagent.main:main"

[tool.setuptools]
package-dir = { "abacusagent" = "src/abacusagent" }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["abacusagent*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["src"]  
testpaths = ["tests"] 
addopts = "-v"        

[project.optional-dependencies]
dev = ["mcp>=1.9.0",
       "abacustest",
       "science-agent-sdk"
]
