[project]
name = "askcos-mcp-server"
version = "0.1.0"
description = "ASKCOS MCP server for computer-aided synthesis planning"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "requests",
    "numpy",
    "rdkit"
]

[project.scripts]
askcos-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"