[project]
name = "orca-mcp-server"
version = "0.1.0"
description = "Example AI4S MCP server demonstrating the new pattern"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "numpy",
    "scipy",
    "python-dotenv>=1.1.1",
    "rdkit>=2025.3.3",
    "science-agent-sdk>=0.1.8",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "chromadb>=1.0.15",
    "sentence-transformers>=5.0.0",
    "langchain-huggingface>=0.3.1",
]

[project.scripts]
example-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
