[project]
name = "paper-search"
version = "0.1.0"
description = "Paper Search Service"
requires-python = ">=3.8"

dependencies = [
    "arxiv==1.4.6",
    "fastapi",
    "uvicorn",
    "fastmcp"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 