[project]
name = "paper-search"
version = "0.1.0"
description = "Paper Search Service"
requires-python = ">=3.10"

dependencies = [
    "arxiv==2.2.0",
    "fastapi",
    "uvicorn",
    "fastmcp"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 