[project]
name = "example-mcp-server"
version = "0.1.0"
description = "Example AI4S MCP server demonstrating the new pattern"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "mcp.server.fastmcp",
    "numpy",
    "scipy"
]

[project.scripts]
example-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"