[project]
name = "thermoelectric-materials-mcp-server"
version = "0.1.0"
description = "Thermoelectric materials screening with CALYPSO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dpdata",
    "numpy",
    "ase",
    "pymatgen",
    "deepmd-kit",
    "pandas",
    "mcp",
    "fastmcp"
]
